--- a/funcionalidad/templates/download_output.html
+++ b/funcionalidad/templates/download_output.html
@@ -2,23 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Processed Documents</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f8f9fa;
-            padding: 50px;
+            background: linear-gradient(to right, #ececec, #ffffff);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            max-width: 600px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            text-align: center;
         }
         h1 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-weight: bold;
-            color: #6a11cb;
+            font-weight: 700;
+            margin-bottom: 20px;
         }
         ul {
             list-style-type: none;
@@ -28,19 +35,22 @@
             margin-bottom: 10px;
         }
         a {
-            color: #2575fc;
+            color: #007bff;
             text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
+            transition: color 0.3s;
         }
         a:hover {
-            color: #6a11cb;
+            color: #0056b3;
+        }
+        p {
+            font-weight: 400;
+            color: #999;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Processed Documents</h1>
+        <h1>Gracias por la espera, estos son tus documentos procesados.</h1>
         <ul>
             {% for file in files %}
                 <li><a href="{% url 'download_file' file %}">{{ file }}</a></li>
