--- a/funcionalidad/templates/upload_documents.html
+++ b/funcionalidad/templates/upload_documents.html
@@ -51,7 +51,18 @@
 <body>
     <div class="container">
         <h1>Hola Guillermo, soy tu asistente de Excel personalizado.</h1>
-        <p>Por favor, sube los documentos que deseas procesar.</p>
+        <p>Por favor, sube los siguientes documentos:</p>
+        <ol>
+            <li>Indeval_1415.csv</li>
+            <li>Indeval_1830.csv</li>
+            <li>PIP.xls</li>
+            <li>PIPViejo.xls</li>
+            <li>VectorAnalitico24h.xls</li>
+            <li>VectorAnaliticoMD.xls</li>
+            <li>VectorViejo.xls</li>
+            <li>Resumen_de_Mercado.xls</li>
+        </ol>
+        <p>Una vez que hayas subido los documentos, presiona el botón "Subir y procesar".</p>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <input type="file" name="documents" multiple required>
