--- a/funcionalidad/templates/upload_documents.html
+++ b/funcionalidad/templates/upload_documents.html
@@ -27,6 +27,10 @@
             font-weight: 700;
             margin-bottom: 20px;
         }
+        .dropdown-menu {
+            text-align: center;
+            font-size: 0.9em;
+        }
         form {
             margin-top: 20px;
         }
@@ -46,22 +50,39 @@
         button:hover {
             background: #0056b3;
         }
+        .dropdown-toggle {
+            background: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        .dropdown-toggle:hover {
+            background: #0056b3;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Hola Guillermo, soy tu asistente de Excel personalizado.</h1>
         <p>Por favor, sube los siguientes documentos:</p>
-        <ol>
-            <li>Indeval_1415.csv</li>
-            <li>Indeval_1830.csv</li>
-            <li>PIP.xls</li>
-            <li>PIPViejo.xls</li>
-            <li>VectorAnalitico24h.xls</li>
-            <li>VectorAnaliticoMD.xls</li>
-            <li>VectorViejo.xls</li>
-            <li>Resumen_de_Mercado.xls</li>
-        </ol>
+        <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Lista de documentos
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item">Indeval_1415.csv</a>
+                <a class="dropdown-item">Indeval_1830.csv</a>
+                <a class="dropdown-item">PIP.xls</a>
+                <a class="dropdown-item">PIPViejo.xls</a>
+                <a class="dropdown-item">VectorAnalitico24h.xls</a>
+                <a class="dropdown-item">VectorAnaliticoMD.xls</a>
+                <a class="dropdown-item">VectorViejo.xls</a>
+                <a class="dropdown-item">Resumen_de_Mercado.xls</a>
+            </div>
+        </div>
         <p>Una vez que hayas subido los documentos, presiona el botón "Subir y procesar".</p>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -69,5 +90,8 @@
             <button type="submit">Subir y procesar</button>
         </form>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
