--- a/funcionalidad/templates/upload_documents.html
+++ b/funcionalidad/templates/upload_documents.html
@@ -51,6 +51,7 @@
             display: inline-block;
             cursor: pointer;
             text-decoration: underline;
+            padding: 5px;
         }
         .tooltip-list:hover .tooltip-content {
             visibility: visible;
@@ -64,6 +65,7 @@
             color: #fff;
             text-align: left;
             border-radius: 5px;
+            padding: 10px;
             position: absolute;
             z-index: 1;
             left: 50%;
