--- a/funcionalidad/templates/upload_documents.html
+++ b/funcionalidad/templates/upload_documents.html
@@ -93,10 +93,26 @@
             </div>
         </div>
         <p>Una vez que hayas subido los documentos, presiona el botón "Subir y procesar".</p>
+        
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <input type="file" name="documents" multiple required>
+
+            <!-- Checkbox for using PIP from yesterday -->
+            <div class="form-check my-3">
+                <input type="checkbox" name="use_pip_yesterday" class="form-check-input" id="pip-checkbox" checked>
+                <label class="form-check-label" for="pip-checkbox">Usar PIP de ayer</label>
+            </div>
+
+            <!-- Checkbox for using VectorAnalitico24h from yesterday -->
+            <div class="form-check mb-3">
+                <input type="checkbox" name="use_vector_yesterday" class="form-check-input" id="vector-checkbox" checked>
+                <label class="form-check-label" for="vector-checkbox">Usar Vector Analítico de 24h de ayer</label>
+            </div>
+
             <button type="submit">Subir y procesar</button>
+        </form>
+
         </form>
     </div>
 </body>
