--- a/funcionalidad/templates/upload_documents.html
+++ b/funcionalidad/templates/upload_documents.html
@@ -101,13 +101,13 @@
             <!-- Checkbox for using PIP from yesterday -->
             <div class="form-check my-3">
                 <input type="checkbox" name="use_pip_yesterday" class="form-check-input" id="pip-checkbox" checked>
-                <label class="form-check-label" for="pip-checkbox">Usar PIP de ayer</label>
+                <label class="form-check-label" for="pip-checkbox">Usar PIP de ayer como PIP viejo de hoy</label>
             </div>
 
             <!-- Checkbox for using VectorAnalitico24h from yesterday -->
             <div class="form-check mb-3">
                 <input type="checkbox" name="use_vector_yesterday" class="form-check-input" id="vector-checkbox" checked>
-                <label class="form-check-label" for="vector-checkbox">Usar Vector Analítico de 24h de ayer</label>
+                <label class="form-check-label" for="vector-checkbox">Usar Vector Analítico de 24h de ayer como Vector Analítico Viejo de hoy</label>
             </div>
 
             <button type="submit">Subir y procesar</button>
